--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,6 +5,8 @@
     <p class="comment_title"><%= time_ago_in_words(comment.created_at) %> Ago</p>
   </div>
 <p>
+  <% if user_signed_in? %>
   <%= link_to 'Delete', [comment.post, comment], method: :delete, class: "button", data: { confirm: 'Are you sure?' } %>
+  <% end %>
 </p>
 </div>
